--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -12,9 +12,16 @@
 \epigraph{You see a wile, you thwart. Am I right?}%
 {\textsc{---terry pratchett and neil gaiman}\\\textit{Good Omens}}
 
-MMTC: Chapter 3 (Design): Maybe you should call the chapter "Design and Related Work". It seems that you want to cover related work there and it is a good idea to make that easy to find.
+MMTC: Chapter 3 (Design): Maybe you should call the chapter ``Design and Related
+Work''. It seems that you want to cover related work there and it is a good idea
+to make that easy to find.
 
-MMTC: More generally, there are two ways to do related work. Everything in one related work chapter or have a related work section at the end of each chapter. The latter works better if there is different sorts of related work for the different chapters. This may apply here as, eg, the related work for embedded languages and the related work for fusion has little overlap. (You can look at my thesis for an example of that style.)
+MMTC: More generally, there are two ways to do related work. Everything in one
+related work chapter or have a related work section at the end of each chapter.
+The latter works better if there is different sorts of related work for the
+different chapters. This may apply here as, eg, the related work for embedded
+languages and the related work for fusion has little overlap. (You can look at
+my thesis for an example of that style.)
 
 
 \begin{itemize}
@@ -44,7 +51,7 @@ MMTC: More generally, there are two ways to do related work. Everything in one r
             \item richly typed terms; environments \& types (type safe evaluator)
             \item types help catch bugs in the compiler; important since
                 compilation happens at program \emph{runtime}
-            \item surface vs. internal (core) languages
+            \item surface vs.\ internal (core) languages
             %\item representing different constructs (c.f. nesting?)
             \item examples: operator expressiveness (application driven)
         \end{itemize}
