--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -38,6 +38,7 @@ my thesis for an example of that style.)
         \item Baracuda \cite{Larsen:2011fa} (Haskell)
         \item Jacket/ArrayFire \cite{AccelerEyes:vq} (Matlab)
         \item Anaconda Accelerate \cite{AnacondaAccelerate:2013vn} (Python)
+        \item NOVA \cite{Collins:2013wn} (??)
     \end{itemize}
 
     \item Why another parallel programming language? (1 day)
