--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 24 Jul 2013.
+%% Created using Papers on Wed, 31 Jul 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -1246,7 +1246,7 @@ number = {2},
 pages = {1--31}
 }
 
-@phdthesis{Keller:1999,
+@phdthesis{Keller:1999vy,
 author = {Keller, Gabriele},
 title = {{Transformation-based Implementation of Nested Data Parallelism for Distributed Memory Machines}},
 school = {Technische Universit\"at Berlin, Fachbereich Informatik},
@@ -2041,6 +2041,13 @@ pages = {245--272},
 month = jun
 }
 
+@phdthesis{Chakravarty:1997ue,
+author = {Chakravarty, Manuel M T},
+title = {{On the Massively Parallel Execution of Declarative Programs}},
+school = {Technische Universit{\"a}t Berlin, Fachbereich Informatik},
+year = {1997}
+}
+
 @article{Claessen:2002,
 author = {Claessen, Koen and Hughes, John},
 title = {{Testing monadic code with QuickCheck}},
@@ -2062,26 +2069,20 @@ address = {New York, NY, USA},
 annote = {Present an analysis of dense matrix-matrix multiplication, and find that even though the algorithm has regular data access patterns and highly parallel computational requirements, the lack of high bandwidth access to cached data will impair performance and limit the types of applications that will benefit from the computational power available from these architectures.}
 }
 
-@techreport{Nikhil:1993,
-author = {Nikhil, Rishiyur S},
-title = {{An Overview of the Parallel Language Id (a foundation for pH, a parallel dialect of Haskell)}},
-year = {1993},
-address = {Cambridge Research Laboratory}
+@book{Anonymous:2012wk,
+title = {{sciencedirect.com}},
+publisher = {Elsevier},
+year = {2012}
 }
 
-@techreport{Bonachea:2006,
-author = {Hilfinger, Paul N. and Bonachea, Dan and Datta, Kaushik and Gay, David and Graham, Susan and Kamil, Amir and Liblit, Ben and Pike, Geoff and Su, Jimmy and Yelick, Katherine},
-title = {{Titanium Language Reference Manual, v2.20}},
-year = {2006},
-month = aug
-}
-
-@techreport{Ghuloum:2007,
-author = {Ghuloum, Anwar and Sprangle, Eric and Fang, Jesse},
-title = {{Flexible Parallel Programming for Terascale Architectures with Ct}},
-year = {2007},
-month = apr,
-annote = {Data-parallel programming platform under development by Intel that targets x86 multicore CPUs. Supports the SPMD stream programming model and uses an embedded C++ interface. Includes an implementation of segmented collectives, which are especially useful for algorithms using nested data parallelism.}
+@inproceedings{Dotsenko:2008fo,
+author = {Dotsenko, Yuri and Govindaraju, Naga K and Sloan, Peter-Pike and Boyd, Charles and Manferdelli, John},
+title = {{Fast scan algorithms on graphics processors}},
+booktitle = {the 22nd annual international conference},
+year = {2008},
+pages = {205--213},
+publisher = {ACM Press},
+address = {New York, New York, USA}
 }
 
 @webpage{Kanter:2008,
@@ -2092,12 +2093,11 @@ month = aug,
 url = {http://www.realworldtech.com/page.cfm?ArticleID=RWT090808195242}
 }
 
-@techreport{Blelloch:1995ut,
-author = {Blelloch, Guy E.},
-title = {{NESL: A Nested Data-Parallel Language}},
-year = {1995},
-number = {CMU-CS-95-170},
-month = sep
+@techreport{Nikhil:1993,
+author = {Nikhil, Rishiyur S},
+title = {{An Overview of the Parallel Language Id (a foundation for pH, a parallel dialect of Haskell)}},
+year = {1993},
+address = {Cambridge Research Laboratory}
 }
 
 @inproceedings{Coutts:2007ia,
@@ -2109,12 +2109,11 @@ pages = {50--64},
 publisher = {Springer-Verlag}
 }
 
-@manual{NVIDIA:2012vj,
-title = {{Parallel Thread Execution ISA}},
-author = {{NVIDIA}},
-edition = {3.1},
-month = sep,
-year = {2012}
+@techreport{Bonachea:2006,
+author = {Hilfinger, Paul N. and Bonachea, Dan and Datta, Kaushik and Gay, David and Graham, Susan and Kamil, Amir and Liblit, Ben and Pike, Geoff and Su, Jimmy and Yelick, Katherine},
+title = {{Titanium Language Reference Manual, v2.20}},
+year = {2006},
+month = aug
 }
 
 @inproceedings{Seiler:2008,
@@ -2127,12 +2126,12 @@ publisher = {ACM},
 address = {New York, NY, USA}
 }
 
-@techreport{NVIDIA:2012wf,
-author = {{NVIDIA}},
-title = {{CUDA C Programming Guide}},
-year = {2012},
-number = {PG-02829-001\_v5.0},
-month = oct
+@techreport{Ghuloum:2007,
+author = {Ghuloum, Anwar and Sprangle, Eric and Fang, Jesse},
+title = {{Flexible Parallel Programming for Terascale Architectures with Ct}},
+year = {2007},
+month = apr,
+annote = {Data-parallel programming platform under development by Intel that targets x86 multicore CPUs. Supports the SPMD stream programming model and uses an embedded C++ interface. Includes an implementation of segmented collectives, which are especially useful for algorithms using nested data parallelism.}
 }
 
 @book{Koelbel:1994,
@@ -2305,6 +2304,38 @@ pages = {4--14},
 annote = {Implementation details of the NESL nested data-parallel language. c.f. Blelloch:1996 Performance comparison for a number of different hardware architectures. Achieves aim of concise description of parallel algorithms, relies on automatically flattening nested data. Demonstrates good performance and concise description for irregular data structures (a specific aim), although somewhat irrelevant now due to changing hardware (no vector/super computer architectures in large use anymore, no limitations for dynamic memory management as in F77).}
 }
 
+@techreport{Blelloch:1995ut,
+author = {Blelloch, Guy E.},
+title = {{NESL: A Nested Data-Parallel Language}},
+year = {1995},
+number = {CMU-CS-95-170},
+month = sep
+}
+
+@manual{NVIDIA:2012vj,
+title = {{Parallel Thread Execution ISA}},
+author = {{NVIDIA}},
+edition = {3.1},
+month = sep,
+year = {2012}
+}
+
+@techreport{NVIDIA:2012wf,
+author = {{NVIDIA}},
+title = {{CUDA C Programming Guide}},
+year = {2012},
+number = {PG-02829-001\_v5.0},
+month = oct
+}
+
+@techreport{Collins:2013wn,
+author = {Collins, Alexander and Grewe, Dominik and Grover, Vinod and Lee, Sean and Susnea, Adriana},
+title = {{NOVA: A Functional Language for Data Parallelism}},
+year = {2013},
+number = {NVR-2013-002},
+month = jul
+}
+
 @incollection{McBride:2005jv,
 author = {McBride, Conor},
 title = {{Epigram: Practical Programming with Dependent Types}},
@@ -2331,6 +2362,15 @@ year = {2009},
 pages = {79--94},
 publisher = {Springer Berlin Heidelberg},
 address = {Berlin, Heidelberg}
+}
+
+@incollection{Harris:2012fy,
+author = {Harris, Mark and Garland, Michael},
+title = {{Optimizing Parallel Prefix Operations for the Fermi Architecture}},
+booktitle = {sciencedirect.com},
+year = {2012},
+pages = {29--38},
+publisher = {Elsevier}
 }
 
 @article{Esmaeilzadeh:2013bw,
