move lena images into canny subdir

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -968,8 +968,8 @@ times for just the first six data parallel phases, which exhibit linear speedup.
 
 \begin{figure}
     \begin{center}
-        \includegraphics[width=0.45\textwidth]{images/sec-6/lena}
-        \includegraphics[width=0.45\textwidth]{images/sec-6/lena-edges}
+        \includegraphics[width=0.45\textwidth]{images/sec-6/canny/lena}
+        \includegraphics[width=0.45\textwidth]{images/sec-6/canny/lena-edges}
     \end{center}
     \caption[Example of the Canny edge detection algorithm]{An example of the
         Canny algorithm applied to the Lena standard test image (left) which
