--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -31,7 +31,7 @@
 %
 %\end{itemize}
 
-% {{{ \begin{itemize}
+% \begin{itemize}
 %\item Accelerate frontend
 %    \begin{itemize}
 %        \item reification
@@ -80,7 +80,7 @@
 %                \item examples! spot the infelicities! (dot product)
 %            \end{itemize}
 %    \end{itemize}
-%\end{itemize} }}}
+%\end{itemize}
 
 %Compilation has five phases:
 %\begin{itemize}
