--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -2226,5 +2226,7 @@ optimisation has, needing to iterate simplifications etc. Probably need a few
 different example programs.}
 
 
-\section{Conclusion}
+\section{Discussion}
+\subsection{Related Work}
+\subsection{Future Work}
 
