--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -1370,3 +1370,7 @@ matrix formats.
 % The regression relative to
 % our previous result will be investigated. Nevertheless,
 
+\section{Discussion}
+\subsection{Related Work}
+\subsection{Future Work}
+
