--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -97,20 +97,22 @@ real-world problems. This chapter details the architecture of the embedding as
 well as the implementation of a backend for parallel execution on CUDA hardware.
 
 \section{Implementing Parallel Algorithms}
-\subsection{Parallel Reduction}
+
+
+\subsection{Reduction}
 \label{sec:parallel_reduction}
 
+Reductions are a common and important data-parallel primitive.
 Figure~\ref{fig:tree_reduction} illustrates the basic strategy of a tree
-\marginnote{tk: move to the implementation chapter}
-reduction, a common and important data-parallel primitive. Within each thread
-block a tree-based approach is used to reduce elements to a single value, and
-multiple thread blocks each process a portion of the array in parallel. There is
-no global synchronisation primitive in CUDA, because (a) it would be expensive
-to build in hardware for large numbers of multiprocessors, and (b) would be
-difficult for programmers to use without introducing sources of deadlock.
-Instead, kernel launches serve as a global synchronisation point, so thread
-blocks instead communicate their partial results by committing them to memory,
-and the kernel is launched recursively until the final reduction is computed.
+reduction: within each thread block a tree-based approach is used to reduce
+elements to a single value, and multiple thread blocks each process a portion of
+the array in parallel. There is no global synchronisation primitive in CUDA,
+because (a) it would be expensive to build in hardware for large numbers of
+multiprocessors, and (b) would be difficult for programmers to use without
+introducing sources of deadlock. Instead, kernel launches serve as a global
+synchronisation point, so thread blocks instead communicate their partial
+results by committing them to memory, and the kernel is launched recursively
+until the final reduction is computed.
 
 \begin{figure}[htbp]
     \begin{center}
@@ -180,3 +182,35 @@ This suggests, for example, that a block of 256 threads should sum a total of
 thread, since this reduces the number of levels in the recursive tree reduction
 and provides better latency hiding.
 
+
+\subsection{Implementation}
+
+Reduction of a one dimensional array uses multiple thread blocks to
+cooperatively reduce the array, as described above. The number of thread blocks
+is limited to the maximum number of blocks that can be simultaneously resident
+on the current device, which requires that blocks each do a larger amount of
+sequential work before being the cooperative reduction phase. This limits the
+total kernel startup cost associated with launching thread blocks. Since the
+maximum number of resident blocks is typically much less than the number of
+threads in a block, the reduction will typically require at most two kernel
+invocations.\footnote{Accelerate selects the thread block size in order to
+maximise thread occupancy. As this depends on both the specific GPU being used
+the user function the array is reduced with, an upper bound of two parallel
+steps can not be guaranteed.}
+
+Higher-dimensional reductions reduce the array along the innermost dimension
+only. This is similar to a segmented fold, except that the segment descriptor is
+not necessary since the length of every segment is the same and can be
+determined from the array shape. Instead of thread blocks cooperatively reducing
+each segment sequentially, each segment is reduced by a single thread block
+which operates independently of all other thread blocks. A consequence of this
+is that proper device utilisation depends on the shape of the array and not
+simply the total number of elements in the array. For example, reduction of an
+array with shape \code{(Z :. 2 :. n)} will use two thread blocks, no matter how
+large \code{n} is.\footnote{The number of multiprocessors on a device various
+between architecture generation and performance of a given card. For example a
+compute 1.x device will have 32 cores per multiprocessor, a compute 2.1 device
+48 cores per multiprocessor, and a compute 3.x device uses 192 cores per
+multiprocessor. This generally results in a fewer number of multiprocessors for
+later generation devices, even though the total core count is typically
+greater.}
