--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -226,7 +226,7 @@ thread, since this reduces the number of levels in the recursive tree reduction
 and provides better latency hiding.
 
 
-\subsection{Mapping to CUDA Threads}
+\subsubsection{Mapping to CUDA Threads}
 
 Reduction of a one dimensional array uses multiple thread blocks to
 cooperatively reduce the array, as described above. The number of thread blocks
@@ -238,8 +238,8 @@ maximum number of resident blocks is typically much less than the number of
 threads in a block, the reduction will typically require at most two kernel
 invocations.\footnote{Accelerate selects the thread block size in order to
 maximise thread occupancy. As this depends on both the specific GPU being used
-the user function the array is reduced with, an upper bound of two parallel
-steps can not be guaranteed.}
+as well as the user function the array is reduced with, an upper bound of two
+parallel steps can not be guaranteed.}
 
 Higher-dimensional reductions reduce the array along the innermost dimension
 only. This is similar to a segmented fold, except that the segment descriptor is
@@ -249,13 +249,13 @@ each segment sequentially, each segment is reduced by a single thread block
 which operates independently of all other thread blocks. A consequence of this
 is that proper device utilisation depends on the shape of the array and not
 simply the total number of elements in the array. For example, reduction of an
-array with shape \code{(Z :. 1 :. n)} will use a single thread block, no matter how
-large \code{n} is. Clearly this is not ideal.\footnote{The number of
-multiprocessors on a device various between architecture generation and
-performance of a given card. For example, a Tesla T10 processor (compute
-compatability 1.3) has 240 cores split over 30 multiprocessors, while a Kepler
-K20X processor (compute capability 3.5) has 2688 cores split over only 14
-multiprocessors. A given architecture generation will have the same number of
-cores per multiprocessor, and lower performance processors in a generation are
-produced by incorporating (or activating) fewer multiprocessors, thereby
-reducing the total core count.}
+array with shape \code{(Z :. 1 :. n)} will use a single thread block, no matter
+how large \code{n} is. This simplifies the implementation but is clearly not
+always ideal.\footnote{The number of multiprocessors on a device various between
+architecture generation and performance of a given card. For example, a Tesla
+T10 processor (compute compatability 1.3) has 240 cores split over 30
+multiprocessors, while a Kepler K20X processor (compute capability 3.5) has 2688
+cores split over only 14 multiprocessors. A given architecture generation will
+have the same number of cores per multiprocessor, and lower performance
+processors in a generation are produced by incorporating (or activating) fewer
+multiprocessors, thereby reducing the total core count.}
