--- a/thesis.bib
+++ b/thesis.bib
@@ -1119,7 +1119,7 @@ year = {1989},
 annote = {Use a two-level language where parallel programs are decomposed into templates encoding a fixed parallel structure, and scalar code that is injected at predefined points into that structure.}
 }
 
-@inproceedings{Sengupta:2007a,
+@inproceedings{Sengupta:2007wf,
 author = {Sengupta, Shubhabrata and Lefohn, Aaron E and Owens, John D},
 title = {{A work--efficient step--efficient prefix--sum algorithm}},
 booktitle = {Proceedings of the Workshop on Edge Computing Using New Commodity Architectures},
@@ -2069,10 +2069,13 @@ address = {New York, NY, USA},
 annote = {Present an analysis of dense matrix-matrix multiplication, and find that even though the algorithm has regular data access patterns and highly parallel computational requirements, the lack of high bandwidth access to cached data will impair performance and limit the types of applications that will benefit from the computational power available from these architectures.}
 }
 
-@book{Anonymous:2012wk,
-title = {{sciencedirect.com}},
-publisher = {Elsevier},
-year = {2012}
+@book{Hwu:2012wf,
+editor = {Hwu, Wen-mei W.},
+title = {{GPU Computing Gems: Jade Edition}},
+publisher = {Morgan Kaufmann},
+year = {2012},
+edition = {1},
+month = oct
 }
 
 @inproceedings{Dotsenko:2008fo,
@@ -2367,10 +2370,11 @@ address = {Berlin, Heidelberg}
 @incollection{Harris:2012fy,
 author = {Harris, Mark and Garland, Michael},
 title = {{Optimizing Parallel Prefix Operations for the Fermi Architecture}},
-booktitle = {sciencedirect.com},
+booktitle = {GPU Computing Gems: Jade Edition},
 year = {2012},
 pages = {29--38},
-publisher = {Elsevier}
+publisher = {Morgan Kaufmann},
+month = oct
 }
 
 @article{Esmaeilzadeh:2013bw,
