do/while loops for listings keyword highlighting

--- a/lstlang0.sty
+++ b/lstlang0.sty
@@ -3,8 +3,8 @@
 %
 
 \lst@definelanguage{CUDA}[ISO]{C++}{
-    deletekeywords=[1]{if,else,for,while,switch,case},
-    morekeywords=[2]{if,else,for,while,switch,case},
+    deletekeywords=[1]{if,else,for,while,do,switch,case},
+    morekeywords=[2]{if,else,for,while,do,switch,case},
     %
     moredirectives={version,extension},
     deletekeywords={},
